[package]
name = "bevy_promise"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/bevy_promise_core",
    "crates/bevy_promise_http",
    "crates/bevy_promise_macro"
]

[dependencies]
bevy = "0.9"
bevy_promise_macro = { path = "crates/bevy_promise_macro" }
bevy_promise_core = { path = "crates/bevy_promise_core" }
bevy_promise_http = { path = "crates/bevy_promise_http" }
