[package]
name = "pecs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/pecs_core",
    "crates/pecs_http",
    "crates/pecs_macro"
]

[dependencies]
bevy = "0.9"
pecs_macro = { path = "crates/pecs_macro" }
pecs_core = { path = "crates/pecs_core" }
pecs_http = { path = "crates/pecs_http" }
