[package]
name = "pecs"
version = "0.2.3"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Asynchronous operations for Bevy Engine"
homepage = "https://github.com/jkb0o/pecs"
repository = "https://github.com/jkb0o/pecs"


[workspace]
members = [
    "crates/pecs_core",
    "crates/pecs_http",
    "crates/pecs_macro"
]

[dependencies]
bevy = "0.9"
pecs_macro = { path = "crates/pecs_macro", version = "0.2.3"}
pecs_core = { path = "crates/pecs_core", version = "0.2.3" }
pecs_http = { path = "crates/pecs_http",  version = "0.2.3" }
