[package]
name = "pecs_http"
version = "0.2.3"
edition = "2021"
description = "Asynchronous operations for Bevy Engine"
homepage = "https://github.com/jkb0o/pecs"
repository = "https://github.com/jkb0o/pecs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
ehttp = "0.2"
futures-lite = "1.12"
pecs_core = { path = "../pecs_core", version = "0.2.3"}