[package]
name = "pecs_macro"
version = "0.3.0"
edition = "2021"
description = "Asynchronous operations for Bevy Engine"
homepage = "https://github.com/jkb0o/pecs"
repository = "https://github.com/jkb0o/pecs"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0" 
syn = { version = "1.0", features = ["full"] }
toml = "0.5"